Refactor CORS configuration to use Arrays.asList